--- a/angular.json
+++ b/angular.json
@@ -18,6 +18,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/cutiequery",
+            "baseHref": "/date/",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
